Fixed White Gap

--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -24,6 +24,7 @@ body {
 .test-sec {
   background-color: #333437;
   color: #f5f5f5;
+  padding-bottom: 100px;
 }
 
 .test-container {
@@ -31,7 +32,7 @@ body {
   flex-direction: column;
   min-height: 75vh;
   max-width: 75%;
-  margin: 0 auto 100px;
+  margin: 0 auto;
   font-family: "Cormorant Garamond", serif;
 }
 
